--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -4,6 +4,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
+
+  @media (max-width: 700px) {
+    padding: 2rem;
+  }
 }
 
 .description {
@@ -183,16 +187,14 @@
 
   .description div {
     align-items: flex-end;
-    pointer-events: none;
     inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
+    padding: 1rem;
     background: linear-gradient(
       to bottom,
       transparent 0%,
       rgb(var(--background-end-rgb)) 40%
     );
-    z-index: 1;
+    backdrop-filter: blur(24px);
   }
 }
 
